maintainIT2/src/objects/Location__c.object
<CustomObject>
    <description>Location instance.</description>
    <fields>
        <fullName>Address_2__c</fullName>
        <label>Address_2</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External_Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_XY__c</fullName>
        <label>Location XY</label>
        <scale>2</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>Alabama</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alaska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arizona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arkansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>California</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colorado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connecticut</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delaware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Florida</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Georgia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hawaii</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Idaho</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Illinois</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Iowa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kentucky</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Louisiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maryland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Massachusetts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Michigan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minnesota</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mississippi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missouri</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Montana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nebraska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nevada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Hampshire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Jersey</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>--None--</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <label>Zip</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>Location</label>
    <nameField>
        <label>Location Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Locations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>